--- a/Proyecto Final/css/style.css
+++ b/Proyecto Final/css/style.css
@@ -63,3 +63,27 @@ h1{
     background-color: white;
     transform: scale(1,1.2);
 }
+
+/* Estilo del boton de carrito */
+
+.fa-stack[data-count]:after{
+  position:absolute;
+  right:0%;
+  top:0%;
+  content: attr(data-count);
+  font-size:40%;
+  padding:.6em;
+  border-radius:999px;
+  line-height:.75em;
+  color: white;
+  color:black;
+  text-align:center;
+  min-width:2em;
+  font-weight:bold;
+  background: white;
+  border-style:solid;
+}
+
+.red-cart {
+	color: black; background:white;
+}
